# opengl-blur-test

./: .gitignore  2d.cc  CMakeLists.txt  Camera.hh  Common.hh  README.md  Rect.hh  Shader.hh  blur_rect.fs  blur_rect.vs  screen.fs  screen.vs  simple_rect.fs  simple_rect.vs
